--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>أكاديمية أبقراط للتدريب - الملف التعريفي</title>
     <meta name="description" content="أكاديمية أبقراط للتدريب، مركز رائد في تقديم دورات وورش عمل متخصصة في المجالات الصحية، الطبية، والإدارية لتطوير وتعزيز الكوادر المهنية في الأردن.">
+    <meta name="google-site-verification" content="A4ZbnCBHaVPs26oBJig7VHjCOdOl3hIpsuB3i7Jfa-8" />
     <link rel="icon" type="image/png" href="https://i.imgur.com/vEQQB9o.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -564,25 +565,25 @@
             </section>
 
              <section id="facebook-feed" class="mb-24 reveal">
-                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" style="color: var(--primary-dark-blue);">
-                      <span data-lang="ar">تابعنا على فيسبوك</span>
-                      <span data-lang="en" class="hidden">Follow Us on Facebook</span>
-                 </h2>
-                 <div class="max-w-xl mx-auto bg-white p-2 sm:p-4 rounded-lg shadow-md">
-                      <div class="fb-page"
-                           data-href="https://www.facebook.com/HTAcademyjo"
-                           data-tabs="timeline"
-                           data-width="500"
-                           data-height=""
-                           data-small-header="false"
-                           data-adapt-container-width="true"
-                           data-hide-cover="false"
-                           data-show-facepile="true">
-                           <blockquote cite="https://www.facebook.com/HTAcademyjo" class="fb-xfbml-parse-ignore">
-                                <a href="https://www.facebook.com/HTAcademyjo">Hippocrates Training Academy</a>
-                           </blockquote>
-                      </div>
-                 </div>
+                  <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" style="color: var(--primary-dark-blue);">
+                        <span data-lang="ar">تابعنا على فيسبوك</span>
+                        <span data-lang="en" class="hidden">Follow Us on Facebook</span>
+                  </h2>
+                  <div class="max-w-xl mx-auto bg-white p-2 sm:p-4 rounded-lg shadow-md">
+                        <div class="fb-page"
+                             data-href="https://www.facebook.com/HTAcademyjo"
+                             data-tabs="timeline"
+                             data-width="500"
+                             data-height=""
+                             data-small-header="false"
+                             data-adapt-container-width="true"
+                             data-hide-cover="false"
+                             data-show-facepile="true">
+                             <blockquote cite="https://www.facebook.com/HTAcademyjo" class="fb-xfbml-parse-ignore">
+                                  <a href="https://www.facebook.com/HTAcademyjo">Hippocrates Training Academy</a>
+                             </blockquote>
+                        </div>
+                  </div>
              </section>
 
             <section id="contact" class="reveal">
@@ -605,8 +606,8 @@
                         <div class="p-8 flex flex-col items-center justify-center text-center space-y-4">
                              <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" style="color: var(--cta-green);" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
                              <h3 class="text-xl font-bold" style="color: var(--primary-dark-blue);">
-                                   <span data-lang="ar">موقعنا</span>
-                                   <span data-lang="en" class="hidden">Our Location</span>
+                                    <span data-lang="ar">موقعنا</span>
+                                    <span data-lang="en" class="hidden">Our Location</span>
                              </h3>
                              <span class="text-lg text-gray-600"><span data-lang="ar">عمان، الأردن</span><span data-lang="en" class="hidden">Amman, Jordan</span></span>
                         </div>
