--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
         </header>
 
-        <section class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: linear-gradient(rgba(13, 71, 161, 0.7), rgba(13, 71, 161, 0.7)), url('https://i.imgur.com/asFQrUJ.png');">
+        <section class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: linear-gradient(rgba(13, 71, 161, 0.7), rgba(13, 71, 161, 0.7)), url('https://ik.imagekit.io/mahmoud73/HTA%20Company%20Profile%202_page2_image.png?updatedAt=1760255293104');">
             <div class="text-center p-8 text-white">
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight animate-fade-in-down">
                     <span data-lang="ar">أكاديمية أبقراط للتدريب</span>
@@ -393,7 +393,7 @@
                     </div>
                 </div>
             </section>
-
+            
             <section id="why-us" class="mb-24 reveal">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" style="color: var(--primary-dark-blue);">
                     <span data-lang="ar">لماذا تختارنا؟</span>
@@ -462,7 +462,7 @@
                     </div>
                 </div>
             </section>
-            
+
             <section id="courses" class="mb-24 reveal">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" style="color: var(--primary-dark-blue);">
                     <span data-lang="ar">الدورات وورش العمل</span>
@@ -499,7 +499,6 @@
                     </div>
                 </div>
             </section>
-
 
             <section id="team" class="mb-24 reveal">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12" style="color: var(--primary-dark-blue);">
@@ -618,7 +617,7 @@
                             </p>
                             <div class="flex space-x-6">
                                  <a href="https://www.facebook.com/HTAcademyjo" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-800" aria-label="Facebook Page"><svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" /></svg></a>
-                                 <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-pink-600" aria-label="Instagram Profile"><svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.024.048-1.378.06-3.808.06s-2.784-.012-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 016.345 2.525c.636-.247 1.363-.416 2.427-.465C9.793 2.013 10.147 2 12.315 2zm0 1.623c-2.393 0-2.713.01-3.663.052-1.002.046-1.517.208-1.943.372a3.282 3.282 0 00-1.18 1.18c-.164.426-.326.94-.372 1.943-.043.95-.052 1.27-.052 3.663s.01 2.713.052 3.663c.046 1.002.208 1.517.372 1.943a3.282 3.282 0 001.18 1.18c.426.164.94.326 1.943.372.95.043 1.27.052 3.663.052s2.713-.01 3.663-.052c1.002-.046 1.517-.208 1.943-.372a3.282 3.282 0 001.18-1.18c.164-.426.326-.94.372-1.943.043-.95.052-1.27.052-3.663s-.01-2.713-.052-3.663c-.046-1.002-.208-1.517-.372-1.943a3.282 3.282 0 00-1.18-1.18c-.426-.164-.94-.326-1.943-.372C15.028 3.633 14.708 3.623 12.315 3.623zM12 8.118a3.882 3.882 0 110 7.764 3.882 3.882 0 010-7.764zm0 6.132a2.25 2.25 0 100-4.5 2.25 2.25 0 000 4.5zM16.882 6.882a1.227 1.227 0 11-2.454 0 1.227 1.227 0 012.454 0z" clip-rule="evenodd" /></svg></a>
+                                 <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-pink-600" aria-label="Instagram Profile"><svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.024.048-1.378.06-3.808.06s-2.784-.012-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 016.345 2.525c.636-.247 1.363-.416 2.427-.465C9.793 2.013 10.147 2 12.315 2zm0 1.623c-2.393 0-2.713.01-3.663.052-1.002.046-1.517.208-1.943.372a3.282 3.282 0 00-1.18 1.18c-.164.426-.326.94-.372 1.943-.043.95-.052 1.27-.052 3.663s.01 2.713.052 3.663c.046 1.002.208 1.517.372 1.943a3.282 3.282 0 001.18 1.18c.426.164.94.326 1.943.372.95.043 1.27.052 3.663.052s2.713-.01 3.663-.052c1.002-.046 1.517-.208-1.943-.372a3.282 3.282 0 001.18-1.18c.164-.426.326-.94-.372-1.943.043-.95.052-1.27.052-3.663s-.01-2.713-.052-3.663c-.046-1.002-.208-1.517-.372-1.943a3.282 3.282 0 00-1.18-1.18c-.426-.164-.94-.326-1.943-.372C15.028 3.633 14.708 3.623 12.315 3.623zM12 8.118a3.882 3.882 0 110 7.764 3.882 3.882 0 010-7.764zm0 6.132a2.25 2.25 0 100-4.5 2.25 2.25 0 000 4.5zM16.882 6.882a1.227 1.227 0 11-2.454 0 1.227 1.227 0 012.454 0z" clip-rule="evenodd" /></svg></a>
                             </div>
                         </div>
                     </div>
