--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>أكاديمية أبقراط للتدريب - الملف التعريفي</title>
     <meta name="description" content="أكاديمية أبقراط للتدريب، مركز رائد في تقديم دورات وورش عمل متخصصة في المجالات الصحية، الطبية، والإدارية لتطوير وتعزيز الكوادر المهنية في الأردن.">
     <meta name="google-site-verification" content="A4ZbnCBHaVPs26oBJig7VHjCOdOl3hIpsuB3i7Jfa-8" />
-    <link rel="icon" type="image/png" href="https://i.imgur.com/vEQQB9o.png">
+    <link rel="icon" type="image/png" href="https://ik.imagekit.io/mahmoud73/%D8%AA%D8%B5%D9%85%D9%8A%D9%85%20%D8%A8%D8%AF%D9%88%D9%86%20%D8%B9%D9%86%D9%88%D8%A7%D9%86%20(1).png?updatedAt=1760256136070">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -146,7 +146,7 @@
 
     <div id="preloader" class="fixed top-0 left-0 w-full h-full flex justify-center items-center z-[9999] transition-opacity duration-1000 ease-in-out" style="background-color: var(--secondary-light-gray);">
         <div class="text-center">
-            <img src="https://i.imgur.com/vEQQB9o.png" alt="شعار أكاديمية أبقراط للتحميل" class="h-24 w-auto animate-pulse mx-auto">
+            <img src="https://ik.imagekit.io/mahmoud73/%D8%AA%D8%B5%D9%85%D9%8A%D9%85%20%D8%A8%D8%AF%D9%88%D9%86%20%D8%B9%D9%86%D9%88%D8%A7%D9%86%20(1).png?updatedAt=1760256136070" alt="شعار أكاديمية أبقراط للتحميل" class="h-24 w-auto animate-pulse mx-auto">
             <h2 class="text-2xl font-bold mt-6 animate-fade-in-up" style="animation-delay: 200ms; color: var(--primary-gray);">
                 <span data-lang="ar">أكاديمية أبقراط للتدريب</span>
                 <span data-lang="en" class="hidden">Hippocrates Training Academy</span>
@@ -158,7 +158,7 @@
         <header id="page-header" class="backdrop-blur-sm sticky top-0 z-50 shadow-lg" style="background-color: rgba(13, 71, 161, 0.9);">
             <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
                 <div class="flex items-center space-x-4 rtl:space-x-reverse">
-                    <img src="https://i.imgur.com/vEQQB9o.png" alt="شعار أكاديمية أبقراط" class="h-16 w-auto">
+                    <img src="https://ik.imagekit.io/mahmoud73/%D8%AA%D8%B5%D9%85%D9%8A%D9%85%20%D8%A8%D8%AF%D9%88%D9%86%20%D8%B9%D9%86%D9%88%D8%A7%D9%86%20(1).png?updatedAt=1760256136070" alt="شعار أكاديمية أبقراط" class="h-16 w-auto">
                     <a href="#" class="text-xl font-bold text-white hidden sm:block">
                         <span data-lang="ar">أكاديمية أبقراط للتدريب</span>
                         <span data-lang="en" class="hidden">Hippocrates Training Academy</span>
@@ -617,7 +617,7 @@
                             </p>
                             <div class="flex space-x-6">
                                  <a href="https://www.facebook.com/HTAcademyjo" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-blue-800" aria-label="Facebook Page"><svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" /></svg></a>
-                                 <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-pink-600" aria-label="Instagram Profile"><svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.024.048-1.378.06-3.808.06s-2.784-.012-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 016.345 2.525c.636-.247 1.363-.416 2.427-.465C9.793 2.013 10.147 2 12.315 2zm0 1.623c-2.393 0-2.713.01-3.663.052-1.002.046-1.517.208-1.943.372a3.282 3.282 0 00-1.18 1.18c-.164.426-.326.94-.372 1.943-.043.95-.052 1.27-.052 3.663s.01 2.713.052 3.663c.046 1.002.208 1.517.372 1.943a3.282 3.282 0 001.18 1.18c.426.164.94.326 1.943.372.95.043 1.27.052 3.663.052s2.713-.01 3.663-.052c1.002-.046 1.517-.208-1.943-.372a3.282 3.282 0 001.18-1.18c.164-.426.326-.94-.372-1.943.043-.95.052-1.27.052-3.663s-.01-2.713-.052-3.663c-.046-1.002-.208-1.517-.372-1.943a3.282 3.282 0 00-1.18-1.18c-.426-.164-.94-.326-1.943-.372C15.028 3.633 14.708 3.623 12.315 3.623zM12 8.118a3.882 3.882 0 110 7.764 3.882 3.882 0 010-7.764zm0 6.132a2.25 2.25 0 100-4.5 2.25 2.25 0 000 4.5zM16.882 6.882a1.227 1.227 0 11-2.454 0 1.227 1.227 0 012.454 0z" clip-rule="evenodd" /></svg></a>
+                                 <a href="https://instagram.com/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-pink-600" aria-label="Instagram Profile"><svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.024.048-1.378.06-3.808.06s-2.784-.012-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 016.345 2.525c.636-.247 1.363-.416 2.427-.465C9.793 2.013 10.147 2 12.315 2zm0 1.623c-2.393 0-2.713.01-3.663.052-1.002.046-1.517.208-1.943.372a3.282 3.282 0 00-1.18 1.18c-.164.426-.326.94-.372 1.943-.043.95-.052 1.27-.052 3.663s.01 2.713.052 3.663c.046 1.002.208 1.517.372 1.943a3.282 3.282 0 001.18 1.18c.426.164.94.326 1.943.372.95.043 1.27.052 3.663.052s2.713-.01 3.663-.052c1.002-.046 1.517-.208 1.943-.372a3.282 3.282 0 001.18-1.18c.164-.426.326-.94.372-1.943.043-.95.052-1.27.052-3.663s-.01-2.713-.052-3.663c-.046-1.002-.208-1.517-.372-1.943a3.282 3.282 0 00-1.18-1.18c-.426-.164-.94-.326-1.943-.372C15.028 3.633 14.708 3.623 12.315 3.623zM12 8.118a3.882 3.882 0 110 7.764 3.882 3.882 0 010-7.764zm0 6.132a2.25 2.25 0 100-4.5 2.25 2.25 0 000 4.5zM16.882 6.882a1.227 1.227 0 11-2.454 0 1.227 1.227 0 012.454 0z" clip-rule="evenodd" /></svg></a>
                             </div>
                         </div>
                     </div>
