--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </h2>
         </div>
     </div>
-
+    
     <div id="main-content" class="opacity-0 transition-opacity duration-1000 ease-in">
         <header id="page-header" class="backdrop-blur-sm sticky top-0 z-50 shadow-lg" style="background-color: rgba(13, 71, 161, 0.9);">
             <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
@@ -215,7 +215,7 @@
             </div>
         </header>
 
-        <section class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: linear-gradient(rgba(13, 71, 161, 0.7), rgba(13, 71, 161, 0.7)), url('https://ik.imagekit.io/mahmoud73/HTA%20Company%20Profile%202_page2_image.png?updatedAt=1760255293104');">
+        <section class="min-h-screen bg-cover bg-center flex items-center justify-center" style="background-image: linear-gradient(rgba(13, 71, 161, 0.7), rgba(13, 71, 161, 0.7)), url('https://ik.imagekit.io/mahmoud73/HTA-Company-Profile-2_page2_image.webp?updatedAt=1760263029817');">
             <div class="text-center p-8 text-white">
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight animate-fade-in-down">
                     <span data-lang="ar">أكاديمية أبقراط للتدريب</span>
